# cephsum

./: .gitignore  README.md  requirements.txt  setup.cfg
cephsum/: XrdCks.py  __init__.py  actions.py  adler32.py  cephsum.py  cephtools.py  checksum.py  esearch.py  lfn2pfn.py  rmlocks.py
scripts/: xrd_cephsum.sh  xrdcp-tpc.sh
tests/: tests.py
