[metadata]
name = cephsum
version = 0.0.1
author = James Walder
author_email = james.walder@gmail.com
description = Provide adler32 checksum operations on files in Ceph storage, using librados, replacing xrootd internal calls.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snafus/cephsum.git
project_urls =
    Bug Tracker = https://github.com/snafus/cephsum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = cephsum
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cephsum
