[metadata]
name = cephsum
version = 1.0.3
author = James Walder
author_email = james.walder@gmail.com
description = Provide adler32 checksum operations on files in Ceph storage, using librados, replacing xrootd internal calls.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snafus/cephsum.git
project_urls =
    Bug Tracker = https://github.com/snafus/cephsum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
#    = cephsum
packages = cephsum
python_requires = >=3.6
scripts = 
     cephsum/cephsum.py
[options.packages.find]
where = cephsum
